samples/_failures_safe/1761073282_7f117a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c70eea81.c: In function ‘print_token’:
./samples/SAFE/__tmp_c70eea81.c:171:9: error: expected expression at end of input
  171 |         "NUMBER", "IDENTIFIER",
      |         ^~~~~~~~
./samples/SAFE/__tmp_c70eea81.c:171:9: error: expected declaration or statement at end of input
